--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "bootstrap": "^5.3.3",
+    "gsap": "^3.12.5",
     "vue": "^3.4.21"
   },
   "devDependencies": {
