--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,13 +9,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.16.11",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
     "gsap": "^3.12.5",
+    "quasar": "^2.16.4",
     "vue": "^3.4.21"
   },
   "devDependencies": {
+    "@quasar/vite-plugin": "^1.7.0",
     "@vitejs/plugin-vue": "^5.0.4",
+    "sass": "^1.33.0",
     "vite": "^5.2.0"
   }
 }
