--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,13 @@
     "@quasar/extras": "^1.16.11",
     "axios": "^1.7.2",
     "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "bootstrap-vue-next": "^0.22.0",
     "gsap": "^3.12.5",
     "quasar": "^2.16.4",
-    "vue": "^3.4.21"
+    "vue": "^3.4.21",
+    "vue-router": "^4.0.13",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@quasar/vite-plugin": "^1.7.0",
