--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "bootstrap-vue-next": "^0.22.0",
+    "date-fns": "^3.6.0",
     "gsap": "^3.12.5",
     "quasar": "^2.16.4",
     "vue": "^3.4.21",
