--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,9 @@
         "laravel/framework": "^11.0",
         "laravel/passport": "*",
         "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "spatie/array-to-xml": "^3.3",
+        "spatie/laravel-fractal": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
